Attempted to fix page-break printout problem on Safari

--- a/css/index.css
+++ b/css/index.css
@@ -510,12 +510,10 @@ section {
     display: flex;
     flex-direction: column;
     overflow: hidden;
-    box-shadow: var(--box-shadow-light-mode);
 }
 
 .card:hover {
     border: 3px solid var(--border-color-card);
-    box-shadow: var(--box-shadow-hover-light-mode);
 }
 
 .card__figure {
@@ -941,6 +939,11 @@ section {
 
     .card {
         background-color: var(--background-light-mode);
+        box-shadow: var(--box-shadow-light-mode);
+    }
+
+    .card:hover {
+        box-shadow: var(--box-shadow-hover-light-mode);
     }
 
     .card * {
@@ -1065,6 +1068,10 @@ section {
         box-shadow: var(--box-shadow-tiny-dark-mode);
     }
 
+    .card:hover {
+        box-shadow: var(--box-shadow-hover-light-mode);
+    }
+    
     .card * {
         color: var(--solid-heading-dark-mode);
     }
